fixed description not showing up

--- a/src/index.css
+++ b/src/index.css
@@ -331,7 +331,6 @@ li:hover>.lightmode-button>span {
 
 .personCardInner {
     position: relative;
-    overflow: hidden;
     display: flex;
     width: 400px;
     height: 266px;
@@ -340,22 +339,21 @@ li:hover>.lightmode-button>span {
     margin: 0 1rem 1rem 0;
     transform-style: preserve-3d;
 }
-.wholeCard:hover .personCardInner, .wholeCard:hover .personCardFront img{
+.personCardInner img{
+    border-radius: 1rem 0 0 1rem;
+}
+.personcard:hover .personCardInner{
     transform: rotateY(180deg);
 }
-.wholeCard:hover .personCardFront h1, .wholeCard:hover .personCardFront h2{
-    opacity: 0;
-    transition: opacity 0.2s;
+.personcard:hover .personCardFront{
+    visibility: hidden;
 }
-.personCardFront, .personCardBack {
+.personCardFront, .personCardBack{
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-}
-.personCardBack{
-    transform: rotateY(180deg);
 }
 .personCardInner, .personCardFront img{
     transition: transform 0.6s;
@@ -370,4 +368,7 @@ li:hover>.lightmode-button>span {
     position: absolute;
     left: 53%;
     top: 30%;
+}
+.personCardBack{
+    transform: rotateY(180deg);
 }
